fix swagger notation model
