# backend/docs/swagger.json
@@ -33,7 +33,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AssetAdd"
+                            "$ref": "#/definitions/model.AssetAdd"
                         }
                     }
                 ],
@@ -41,7 +41,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Asset"
+                            "$ref": "#/definitions/model.Asset"
                         }
                     },
                     "500": {
@@ -74,7 +74,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.AssetList"
+                            "$ref": "#/definitions/model.AssetList"
                         }
                     },
                     "500": {
@@ -137,7 +137,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AssetList"
+                            "$ref": "#/definitions/model.AssetList"
                         }
                     },
                     "500": {
@@ -172,7 +172,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.AssetTotal"
+                                "$ref": "#/definitions/model.AssetTotal"
                             }
                         }
                     },
@@ -215,7 +215,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Asset"
+                            "$ref": "#/definitions/model.Asset"
                         }
                     },
                     "500": {
@@ -255,7 +255,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Asset"
+                            "$ref": "#/definitions/model.Asset"
                         }
                     },
                     "500": {
@@ -346,7 +346,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UsersList"
+                            "$ref": "#/definitions/model.UsersList"
                         }
                     },
                     "500": {
@@ -380,7 +380,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserBase"
+                            "$ref": "#/definitions/model.UserBase"
                         }
                     },
                     "500": {
@@ -453,7 +453,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UsersList"
+                            "$ref": "#/definitions/model.UsersList"
                         }
                     },
                     "500": {
@@ -482,7 +482,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserWithToken"
+                            "$ref": "#/definitions/model.UserWithToken"
                         }
                     }
                 }
@@ -533,7 +533,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Tokens"
+                            "$ref": "#/definitions/model.Tokens"
                         }
                     }
                 }
@@ -559,7 +559,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     }
                 ],
@@ -629,7 +629,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     },
                     "500": {
@@ -670,7 +670,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     }
                 }
@@ -818,7 +818,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MarketList"
+                            "$ref": "#/definitions/model.MarketList"
                         }
                     }
                 }
@@ -845,7 +845,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Market"
+                            "$ref": "#/definitions/model.Market"
                         }
                     }
                 }
@@ -926,7 +926,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MarketList"
+                            "$ref": "#/definitions/model.MarketList"
                         }
                     }
                 }
@@ -962,7 +962,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Market"
+                            "$ref": "#/definitions/model.Market"
                         }
                     }
                 }
@@ -996,7 +996,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Market"
+                            "$ref": "#/definitions/model.Market"
                         }
                     }
                 }
@@ -1085,53 +1085,7 @@
                 }
             }
         },
-        "model.Portfolio": {
-            "type": "object",
-            "required": [
-                "active",
-                "currency_id",
-                "title",
-                "user_id"
-            ],
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "currency_id": {
-                    "type": "string"
-                },
-                "portfolio_id": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.PortfolioList": {
-            "type": "object",
-            "properties": {
-                "asset_total": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.AssetTotal"
-                    }
-                },
-                "portfolio": {
-                    "$ref": "#/definitions/model.Portfolio"
-                }
-            }
-        },
-        "models.AccessToken": {
+        "model.AccessToken": {
             "type": "object",
             "properties": {
                 "prefixToken": {
@@ -1142,7 +1096,7 @@
                 }
             }
         },
-        "models.Asset": {
+        "model.Asset": {
             "type": "object",
             "required": [
                 "amount",
@@ -1152,7 +1106,7 @@
             ],
             "properties": {
                 "amount": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "asset_id": {
                     "type": "string"
@@ -1177,17 +1131,17 @@
                 }
             }
         },
-        "models.AssetAdd": {
+        "model.AssetAdd": {
             "type": "object",
             "required": [
                 "amount",
                 "marketId",
-                "portfolio_id",
+                "portfolioId",
                 "quantity"
             ],
             "properties": {
                 "amount": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "marketId": {
                     "type": "string"
@@ -1195,7 +1149,7 @@
                 "notationAt": {
                     "type": "string"
                 },
-                "portfolio_id": {
+                "portfolioId": {
                     "type": "string"
                 },
                 "quantity": {
@@ -1203,7 +1157,7 @@
                 }
             }
         },
-        "models.AssetBase": {
+        "model.AssetBase": {
             "type": "object",
             "required": [
                 "amount",
@@ -1215,7 +1169,7 @@
             ],
             "properties": {
                 "amount": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "asset_id": {
                     "type": "string"
@@ -1246,13 +1200,13 @@
                 }
             }
         },
-        "models.AssetList": {
+        "model.AssetList": {
             "type": "object",
             "properties": {
                 "assets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.AssetBase"
+                        "$ref": "#/definitions/model.AssetBase"
                     }
                 },
                 "has_more": {
@@ -1272,11 +1226,11 @@
                 }
             }
         },
-        "models.AssetTotal": {
+        "model.AssetTotal": {
             "type": "object",
             "properties": {
                 "averagePurchasePrice": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "firstNotationAt": {
                     "type": "string"
@@ -1297,7 +1251,7 @@
                     "type": "string"
                 },
                 "totalAmount": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "totalCount": {
                     "type": "integer"
@@ -1307,7 +1261,7 @@
                 }
             }
         },
-        "models.Market": {
+        "model.Market": {
             "type": "object",
             "required": [
                 "currency_id",
@@ -1345,7 +1299,7 @@
                 }
             }
         },
-        "models.MarketBase": {
+        "model.MarketBase": {
             "type": "object",
             "required": [
                 "desc_instrument",
@@ -1380,7 +1334,7 @@
                 }
             }
         },
-        "models.MarketList": {
+        "model.MarketList": {
             "type": "object",
             "properties": {
                 "has_more": {
@@ -1389,7 +1343,7 @@
                 "markets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.MarketBase"
+                        "$ref": "#/definitions/model.MarketBase"
                     }
                 },
                 "page": {
@@ -1406,7 +1360,53 @@
                 }
             }
         },
-        "models.RefreshToken": {
+        "model.Portfolio": {
+            "type": "object",
+            "required": [
+                "active",
+                "currencyId",
+                "title",
+                "userId"
+            ],
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "currencyId": {
+                    "type": "string"
+                },
+                "portfolioId": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.PortfolioList": {
+            "type": "object",
+            "properties": {
+                "assetTotal": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.AssetTotal"
+                    }
+                },
+                "portfolio": {
+                    "$ref": "#/definitions/model.Portfolio"
+                }
+            }
+        },
+        "model.RefreshToken": {
             "type": "object",
             "properties": {
                 "token": {
@@ -1414,18 +1414,18 @@
                 }
             }
         },
-        "models.Tokens": {
+        "model.Tokens": {
             "type": "object",
             "properties": {
                 "accessToken": {
-                    "$ref": "#/definitions/models.AccessToken"
+                    "$ref": "#/definitions/model.AccessToken"
                 },
                 "refreshToken": {
-                    "$ref": "#/definitions/models.RefreshToken"
+                    "$ref": "#/definitions/model.RefreshToken"
                 }
             }
         },
-        "models.User": {
+        "model.User": {
             "type": "object",
             "required": [
                 "name",
@@ -1458,29 +1458,29 @@
                 }
             }
         },
-        "models.UserBase": {
+        "model.UserBase": {
             "type": "object",
             "properties": {
                 "user": {
-                    "$ref": "#/definitions/models.User"
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
-        "models.UserWithToken": {
+        "model.UserWithToken": {
             "type": "object",
             "properties": {
                 "accessToken": {
-                    "$ref": "#/definitions/models.AccessToken"
+                    "$ref": "#/definitions/model.AccessToken"
                 },
                 "refreshToken": {
-                    "$ref": "#/definitions/models.RefreshToken"
+                    "$ref": "#/definitions/model.RefreshToken"
                 },
                 "user": {
-                    "$ref": "#/definitions/models.User"
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
-        "models.UsersList": {
+        "model.UsersList": {
             "type": "object",
             "properties": {
                 "has_more": {
@@ -1501,7 +1501,7 @@
                 "users": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.User"
+                        "$ref": "#/definitions/model.User"
                     }
                 }
             }
